tests/rosetta/transpiler/Zig/active-directory-search-for-a-user.error
zig build: exit status 1
/tmp/active-directory-search-for-a-user.zig:25:11: error: expected 'while', 'for', 'inline', or '{', found '['
